// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastNotification renders correctly 1`] = `
<div
  class="toast-notification toast-notification--default"
  role="alertdialog"
>
  <div
    class="toast-notification__content"
  >
    <!---->
     
    <div
      class="toast-notification__message"
    >
      
    </div>
     
    <div
      class="toast-notification__actions"
    >
      <button
        class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
        title="Close"
      >
        <svg
          aria-hidden="true"
          class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
          data-icon="times"
          data-prefix="fal"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
          />
        </svg>
        <span
          class="icon-button__title"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ToastNotification renders gallery correctly 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="mb-4"
  >
    <h2
      class="type-overline type-overline-small mb-2"
    >
      default
    </h2>
     
    <div
      class="toast-notification mb-2 toast-notification--default"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <!---->
         
        <div
          class="toast-notification__message"
        >
          Lorem ipsum dolor sit omet
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--default"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <!---->
         
        <div
          class="toast-notification__message"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--default toast-notification--with-avatar"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <div
          class="toast-notification__avatar-container"
        >
          <div
            class="avatar-image avatar-image--rounded toast-notification__avatar"
            style="background-image: url(https://cdn.filestackcontent.com/resize=width:40,height:40/enCa5BTVeIsLHcgkdpAc); font-size: 1.0625rem; height: 2.5rem; width: 2.5rem;"
          >
            <!---->
          </div>
        </div>
         
        <div
          class="toast-notification__message"
        >
          Lorem ipsum dolor sit omet
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--default toast-notification--with-avatar"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <div
          class="toast-notification__avatar-container"
        >
          <div
            class="avatar-image avatar-image--rounded toast-notification__avatar"
            style="font-size: 1.0625rem; height: 2.5rem; width: 2.5rem;"
          >
            <div
              class="avatar-image__initials"
            >
              
    XO
  
            </div>
          </div>
        </div>
         
        <div
          class="toast-notification__message"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <h2
      class="type-overline type-overline-small mb-2"
    >
      seconary
    </h2>
     
    <div
      class="toast-notification mb-2 toast-notification--seconary"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <!---->
         
        <div
          class="toast-notification__message"
        >
          Lorem ipsum dolor sit omet
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--seconary"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <!---->
         
        <div
          class="toast-notification__message"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--seconary toast-notification--with-avatar"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <div
          class="toast-notification__avatar-container"
        >
          <div
            class="avatar-image avatar-image--rounded toast-notification__avatar"
            style="background-image: url(https://cdn.filestackcontent.com/resize=width:40,height:40/enCa5BTVeIsLHcgkdpAc); font-size: 1.0625rem; height: 2.5rem; width: 2.5rem;"
          >
            <!---->
          </div>
        </div>
         
        <div
          class="toast-notification__message"
        >
          Lorem ipsum dolor sit omet
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--seconary toast-notification--with-avatar"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <div
          class="toast-notification__avatar-container"
        >
          <div
            class="avatar-image avatar-image--rounded toast-notification__avatar"
            style="font-size: 1.0625rem; height: 2.5rem; width: 2.5rem;"
          >
            <div
              class="avatar-image__initials"
            >
              
    XO
  
            </div>
          </div>
        </div>
         
        <div
          class="toast-notification__message"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <h2
      class="type-overline type-overline-small mb-2"
    >
      error
    </h2>
     
    <div
      class="toast-notification mb-2 toast-notification--error"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <!---->
         
        <div
          class="toast-notification__message"
        >
          Lorem ipsum dolor sit omet
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--error"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <!---->
         
        <div
          class="toast-notification__message"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--error toast-notification--with-avatar"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <div
          class="toast-notification__avatar-container"
        >
          <div
            class="avatar-image avatar-image--rounded toast-notification__avatar"
            style="background-image: url(https://cdn.filestackcontent.com/resize=width:40,height:40/enCa5BTVeIsLHcgkdpAc); font-size: 1.0625rem; height: 2.5rem; width: 2.5rem;"
          >
            <!---->
          </div>
        </div>
         
        <div
          class="toast-notification__message"
        >
          Lorem ipsum dolor sit omet
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="toast-notification mb-2 toast-notification--error toast-notification--with-avatar"
      role="alertdialog"
    >
      <div
        class="toast-notification__content"
      >
        <div
          class="toast-notification__avatar-container"
        >
          <div
            class="avatar-image avatar-image--rounded toast-notification__avatar"
            style="font-size: 1.0625rem; height: 2.5rem; width: 2.5rem;"
          >
            <div
              class="avatar-image__initials"
            >
              
    XO
  
            </div>
          </div>
        </div>
         
        <div
          class="toast-notification__message"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
         
        <div
          class="toast-notification__actions"
        >
          <button
            class="toast-notification__close toast-notification__close icon-button icon-button--inverted icon-button--medium icon-button--flat"
            title="Close"
          >
            <svg
              aria-hidden="true"
              class="base-icon svg-inline--fa fa-times fa-w-10 icon-button__icon"
              data-icon="times"
              data-prefix="fal"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class=""
                d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                fill="currentColor"
              />
            </svg>
            <span
              class="icon-button__title"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
